--- a/homepage.html
+++ b/homepage.html
@@ -46,25 +46,34 @@
             </div>
         </nav>
     </header>
-    <!-- Carousel (slideshow) -->
     <div class="container-fluid bg-body">
-        <div class="container-xxl bg-light mt-5 mb-5 pb-5 pt-5">
-            <div class="container-sm ">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
+        <div class="container bg-light mt-5 mb-5 pb-5 pt-5">
+            <!-- Carousel (slideshow) -->
+            <div class="container" >
+                <div id="slideshow" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner rounded" style="height: 520px;">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/test-hiQ.jpg" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="img/test-hiQ.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="img/test-loQ.jpg" alt="Second slide">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/test-hiQ.jpg" alt="Third slide">
                         </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#slideshow" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#slideshow" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
-            <section class="jumbotron text-center">
+            <!-- Text Cloud -->
+            <section class="jumbotron text-center rounded border mt-5 mb-5 pt-5 pb-5 ps-5 pe-5">
                 <div class="container">
                     <h1 class="jumbotron-heading">Kumuuzag é fatto per gli studenti</h1>
                     <p class="lead text-muted">Con Kumuuzag la tua vita sarà finalmente semplice:
@@ -72,92 +81,98 @@
                     nelle vicinanze della tua Università!</p>
                 </div>
             </section>
+            <!-- Array -->
             <div class="container py-2 bg-light">
-                <div class="row overflow-auto d-flex flex-row flex-nowrap">
-                    <div class="card" style="width: 18rem;">
+                <div class="row overflow-hidden d-flex flex-row flex-nowrap">
+                    <div class="card ms-2 me-2" style="width: 18rem;">
                         <img src="img/test-loQ.jpg" class="card-img-top" alt="Immagine Prova">
                         <div class="card-body">
                             <h5 class="card-title">Appartamento Fantastico</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="homepage.html" class="btn btn-primary">Vedi dettagli</a>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/test-loQ.jpg" class="card-img-top" alt="Immagine Prova">
-                        <div class="card-body">
-                            <h5 class="card-title">Appartamento Fantastico</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="homepage.html" class="btn btn-primary">Vedi dettagli</a>
-                        </div>
-                    </div> 
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/test-loQ.jpg" class="card-img-top" alt="Immagine Prova">
-                        <div class="card-body">
-                            <h5 class="card-title">Appartamento Fantastico</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut </p>
                             <a href="homepage.html" class="btn btn-primary">Vedi dettagli</a>
                         </div>
                     </div>
 
-                    <div class="card" style="width: 18rem;">
+                    <div class="card ms-2 me-2" style="width: 18rem;">
                         <img src="img/test-loQ.jpg" class="card-img-top" alt="Immagine Prova">
                         <div class="card-body">
                             <h5 class="card-title">Appartamento Fantastico</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut </p>
                             <a href="homepage.html" class="btn btn-primary">Vedi dettagli</a>
                         </div>
                     </div>
 
-                    <div class="card" style="width: 18rem;">
+                    <div class="card ms-2 me-2" style="width: 18rem;">
                         <img src="img/test-loQ.jpg" class="card-img-top" alt="Immagine Prova">
                         <div class="card-body">
                             <h5 class="card-title">Appartamento Fantastico</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut </p>
                             <a href="homepage.html" class="btn btn-primary">Vedi dettagli</a>
                         </div>
                     </div>
 
-                    <div class="card" style="width: 18rem;">
+                    <div class="card ms-2 me-2" style="width: 18rem;">
                         <img src="img/test-loQ.jpg" class="card-img-top" alt="Immagine Prova">
                         <div class="card-body">
                             <h5 class="card-title">Appartamento Fantastico</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut </p>
                             <a href="homepage.html" class="btn btn-primary">Vedi dettagli</a>
                         </div>
                     </div>
 
-                    <div class="card" style="width: 18rem;">
+                    <div class="card ms-2 me-2" style="width: 18rem;">
                         <img src="img/test-loQ.jpg" class="card-img-top" alt="Immagine Prova">
                         <div class="card-body">
                             <h5 class="card-title">Appartamento Fantastico</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="homepage.html" class="btn btn-primary">Vedi dettagli</a>
-                        </div>
-                    </div>
-
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/test-loQ.jpg" class="card-img-top" alt="Immagine Prova">
-                        <div class="card-body">
-                            <h5 class="card-title">Appartamento Fantastico</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <p class="card-text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut </p>
                             <a href="homepage.html" class="btn btn-primary">Vedi dettagli</a>
                         </div>
                     </div>
                 </div>
-                <a href="homepage.html"><p class="text-center">Vai al catalogo</p></a>
+                <a href="homepage.html" style="text-decoration: none;"> <p class="text-center mt-2 fs-2">Vai al catalogo</p></a>
+            </div>
+            <!-- Registrati -->
+            <div class="container">
+                <p class="fs-1 text-center"> Registrati! </p>
+                <div class="row align-items-start">    
+                    <button class="col btn btn-secondary mt-2 me-2">
+                        <p class="fs-2">Locatore</p>
+                        <ul>
+                            <li>Metti in affito il tuo alloggio</li>
+                            <li>Gestisci le tue inserzioni</li>
+                            <li>Rispondi ai clienti interessati</li>
+                        </ul>
+                    </button>
+                    <button class="col btn btn-secondary mt-2 me-2">
+                        <p class="fs-2">Locatario</p>
+                        <ul>
+                            <li>Trova l'alloggio che fa al caso tuo</li>
+                            <li>Gestisci le tue prenotazioni</li>
+                            <li>Contatta i locatori</li>
+                        </ul>
+                    </button>
+                </div>
+            </div>
+            <!-- Aiuto -->
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="row" >
+                            <p>Hai delle domande?</p>
+                        </div>
+                        <div class="row">
+                            <a href="faq.html" class="btn">Vai alle FAQs</a>
+                            <a href="mailto:s1093394@studenti.univpm.it?Subject=Help%20request" target="_top" class="btn">Contattaci</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <img>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <footer>
-
     </footer>
 </body>
 
