--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
     <header class="container-mt5 header">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="javascript:void(0)">Logo</a>
+                <a class="navbar-brand" href="javascript:void(0)"> <img src="img/brand/logo-colored.png" height="50"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -154,26 +154,71 @@
                 </div>
             </div>
             <!-- Aiuto -->
-            <div class="container">
+            <div class="container border rounded mt-5">
                 <div class="row">
                     <div class="col">
                         <div class="row" >
-                            <p>Hai delle domande?</p>
+                            <p class="fs-1">Hai delle domande?</p>
                         </div>
-                        <div class="row">
-                            <a href="faq.html" class="btn">Vai alle FAQs</a>
-                            <a href="mailto:s1093394@studenti.univpm.it?Subject=Help%20request" target="_top" class="btn">Contattaci</a>
+                        <div class="row" style="margin-top: 10em;">
+                            <a href="faq.html" class="col align-self-end btn btn-primary mt-1 me-2 ms-2">Vai alle FAQs</a>
+                            <a href="mailto:s1093394@studenti.univpm.it?Subject=Help%20request" target="_top" class="col mt-1 align-self-end btn btn-primary me-2 ms-2">Contattaci</a>
                         </div>
                     </div>
-                    <div class="row">
-                        <img>
+                    <div class="col w-50 align-self-center">
+                            <img src="img/brand/logo.png" class="ms-5 img-fluid p-5" width="350">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <footer>
-    </footer>
+<div class="container">
+  <footer class="row row-cols-5 py-5 my-5 border-top">
+    <div class="col">
+      <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+          <img src="img/brand/logo.png" height="100">
+      </a>
+      <p class="text-muted">© 2021</p>
+    </div>
+
+    <div class="col">
+
+    </div>
+
+    <div class="col">
+      <h5>Section</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <h5>Section</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <h5>Section</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+      </ul>
+    </div>
+  </footer>
+</div>
 </body>
 
 </html>
