login praticamente fatto
devo centrare quella madonna di form

--- a/login.html
+++ b/login.html
@@ -42,29 +42,82 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         </nav>
     </header>
     <div class="container-fluid bg-body">
-        <div class="container bg-light mt-5 mb-5 pb-5 pt-5 w-50 text-center ">
+        <div class="container bg-light mt-5 mb-4 pb-3 pt-5 w-50 text-center ">
+            <div class="text-center mb-1">
+                <img src="img/brand/logo-colored.png" style="width: 80px;" alt="logo-coloured">
+            </div>
             <h2 class="jumbotron-heading jumbotron-fluid"> Benvenuto su Kumuuzag!</h2>
             <h2 class="lead"> Effettua il login.</h2>
             <form>
-                <section class= "text-center container">
-                <div class="form-outline row mb-4 mt-5 w-50">
+                <section class= "text-center container ms-5">
+                <div class="form-outline row mb-4 mt-4 w-50">
                     <label class="col-sm-2 col-form-label " for="username"><strong>Username</strong></label>
                     <div class="col-sm-10">
                         <input type="username" id="username" class="form-control ms-5" placeholder="Username" />
                     </div>
                 </div>
-                <div class="form-outline row mb-4 w-50">
-                    <label class="col-sm-2 col-form-label" for="password"><strong>Password</Strong></label>
-                    <div class="col-sm-10">
+                <div class="form-outline row mb-4 mt-3 w-50">
+                    <label class="col-sm-2" for="password"><strong>Password</Strong></label>
+                    <div class="col-sm-10 align-self-center">
                         <input type="password" id="password" class="form-control ms-5" placeholder="Password"/>
                     </div>
                 </div>
                 </section>    
             </form>
-            <div>
-                <!-- div per bottone --> 
+            <div class="text-center">
+                <button class="btn btn-primary mb-3 mt-2" type="button">Login</button>
+            </div>
+            <div class="text-center mt-3">
+                <p><small>Non sei ancora registrato? <a href="login.html">Registrati ora!</a></small></p>
             </div>
         </div>
-    </div>    
+    </div>
+    <div class="container">
+        <footer class="row row-cols-5 py-5 my-5 border-top">
+        <div class="col">
+            <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+                <img src="img/brand/logo-colored.png" height="100" alt="logo-coloured">
+            </a>
+            <p class="text-muted">© 2021</p>
+        </div>
+
+        <div class="col">
+
+        </div>
+
+        <div class="col">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            </ul>
+        </div>
+
+        <div class="col">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            </ul>
+        </div>
+
+        <div class="col">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            </ul>
+        </div>
+        </footer>
+    </div>
     </body>
 </html>
