--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <header class="container-mt5 header">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="javascript:void(0)">Logo</a>
+                <a class="navbar-brand" href="javascript:void(0)"> <img src="img/brand/logo-colored.png" height="50" alt="logo-coloured"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,34 +42,38 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         </nav>
     </header>
     <div class="container-fluid bg-body">
-        <div class="container bg-light mt-5 mb-4 pb-3 pt-5 w-50 text-center ">
-            <div class="text-center mb-1">
-                <img src="img/brand/logo-colored.png" style="width: 80px;" alt="logo-coloured">
-            </div>
-            <h2 class="jumbotron-heading jumbotron-fluid"> Benvenuto su Kumuuzag!</h2>
-            <h2 class="lead"> Effettua il login.</h2>
-            <form>
-                <section class= "text-center container ms-5">
-                <div class="form-outline row mb-4 mt-4 w-50">
-                    <label class="col-sm-2 col-form-label " for="username"><strong>Username</strong></label>
-                    <div class="col-sm-10">
-                        <input type="username" id="username" class="form-control ms-5" placeholder="Username" />
-                    </div>
+        <div class="jumbotron bg-cover rounded ml-5 mr-5" style="background-image: linear-gradient(to bottom, rgba(3,169,244,0.7) 0%, rgba(0,0,0,0.6) 100%), url(https://placeimg.com/1000/480/nature); background-size: cover">    
+          <div class="container">  
+            <div class="container bg-light mt-5 mb-4 pb-3 pt-5 w-50 text-center ">
+                <div class="text-center mb-1">
+                    <img src="img/brand/logo-colored.png" style="width: 80px;" alt="logo-coloured">
                 </div>
-                <div class="form-outline row mb-4 mt-3 w-50">
-                    <label class="col-sm-2" for="password"><strong>Password</Strong></label>
-                    <div class="col-sm-10 align-self-center">
-                        <input type="password" id="password" class="form-control ms-5" placeholder="Password"/>
+                <h2 class="jumbotron-heading jumbotron-fluid"> Benvenuto su Kumuuzag!</h2>
+                <h2 class="lead"> Effettua il login.</h2>
+                <form>
+                    <section class= "text-center container ms-5">
+                    <div class="form-outline row mb-4 mt-4 w-50">
+                        <label class="col-sm-2 col-form-label " for="username"><strong>Username</strong></label>
+                        <div class="col-sm-10">
+                            <input type="username" id="username" class="form-control ms-5" placeholder="Username" />
+                        </div>
                     </div>
+                    <div class="form-outline row mb-4 mt-3 w-50">
+                        <label class="col-sm-2" for="password"><strong>Password</Strong></label>
+                        <div class="col-sm-10 align-self-center">
+                            <input type="password" id="password" class="form-control ms-5" placeholder="Password"/>
+                        </div>
+                    </div>
+                    </section>    
+                </form>
+                <div class="text-center">
+                    <button class="btn btn-primary mb-3 mt-2" type="button">Login</button>
                 </div>
-                </section>    
-            </form>
-            <div class="text-center">
-                <button class="btn btn-primary mb-3 mt-2" type="button">Login</button>
+                <div class="text-center mt-3">
+                    <p><small>Non sei ancora registrato? <a href="login.html">Registrati ora!</a></small></p>
+                </div>
             </div>
-            <div class="text-center mt-3">
-                <p><small>Non sei ancora registrato? <a href="login.html">Registrati ora!</a></small></p>
-            </div>
+          </div>    
         </div>
     </div>
     <div class="container">
